# componego

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .golangci.yaml  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  application.go  component.go  config.go  dependency.go  environment.go  go.mod  processor.go
.github/: SECURITY.md
.github/workflows/: tests.yml
docs/: Dockerfile  README.md  build.sh  docker-compose.yml  mkdocs.yml  pyproject.toml
docs/mkdocs/hooks/: navigation.py  social.py
docs/mkdocs/theme/: home.html
docs/mkdocs/theme/assets/stylesheets/: extra.css  home.css
docs/mkdocs/theme/partials/: copyright.html  meta_social_tags.html
docs/pages/: get-started.md  index.md
docs/pages/contribution/: guide.md
docs/pages/impl/: application.md  component.md  config.md  dependency.md  driver.md  environment.md  processor.md  runner.md
docs/pages/qcomponents/: graceful-shutdown.md
docs/pages/tests/: mock.md  runner.md
docs/pages/warnings/: goroutine-leak.md
examples/: Dockerfile  README.md  docker-compose.yml
examples/hello-app/: Dockerfile
examples/urfave-cli-integration/: README.md
examples/url-shortener-app/: .gitignore  Dockerfile
impl/application/: factory.go  helpers.go  io.go
impl/driver/: driver.go  options.go
impl/environment/: environment.go
impl/processors/: processor.go  types.go
impl/runner/: runner.go
internal/developer/: message.go  runtime.go
internal/system/: os.go  (+1 more)
qcomponents/: Readme.md
scripts/: Dockerfile  make.py
tools/: create-basic-app.sh  create-contributor-env.sh
(+108 files in other folders)
